--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -8,6 +8,16 @@ model {
                     staticLibraryFile = file("src/main/jni/racket/libracket3m.a")
                 }
             }
+            libracket {
+                binaries.withType(StaticLibraryBinary) {
+                    staticLibraryFile = file("src/main/jni/racket/libracket.a")
+                }
+            }
+            libmzgc {
+                binaries.withType(StaticLibraryBinary) {
+                    staticLibraryFile = file("src/main/jni/racket/libmzgc.a")
+                }
+            }
         }
     }
 
@@ -29,7 +39,12 @@ model {
                         exclude "racket/racket_app.c"
                     }
                     dependencies {
+                        // 3m
                         library "libracket3m" linkage "static"
+                        // CGC
+                        //library "libracket" linkage "static"
+                        //library "libmzgc" linkage "static"
+                        
                     }
                 }
             }
@@ -40,12 +55,6 @@ model {
             toolchain = 'clang'
             CFlags.addAll(['-Wall'])
             ldLibs.addAll(['log','GLESv3', 'EGL'])
-        }
-        buildTypes {
-            release {
-                minifyEnabled = false
-                proguardFiles.add(file('proguard-rules.txt'))
-            }
         }
         productFlavors {
             create("arm") {
