--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -26,7 +26,9 @@ model {
                 jni {
                     source {
                         srcDir "src/main/jni"
+                        exclude "racket-vm.c"
                         exclude "racket/racket_app.c"
+                        exclude "racket/racket-vm.3m.c"
                     }
                     dependencies {
                         library "libracket3m" linkage "static"
