--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name">
     <activity android:name=".RacketAndroidProject"
+              android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+              android:launchMode="singleInstance"
+              android:configChanges="orientation|keyboardHidden"
+              android:screenOrientation="userLandscape"
               android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
