--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="org.racketlang.android.project"
           android:versionCode="1"
           android:versionName="1.0">
+  <use-feature android:glEsVersion="0x00030001" />
   <application
       android:debuggable="false"
       android:allowBackup="false"
