--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
           android:versionName="1.0">
   <use-feature android:glEsVersion="0x00030001" />
   <application
+      android:name="android.support.multidex.MultiDexApplication"
       android:debuggable="false"
       android:allowBackup="false"
       android:fullBackupContent="false"
